skin/frontend/base/default/magebuzz/manufacturer/css/manufacturer.css
.manufacturers {
}

/* Featured Manufacturer */
.featured-manufacturers {
    overflow: hidden;
}

.manufacturers h2.title, .featured-manufacturers h2.title {
    border-bottom: 1px solid #DDDDDD;
    color: #565656;
    padding: 0 0 5px;
    font-weight: normal;
    font-size: 18px;
    margin: 10px 0;
}

#featured-manu-screen {
    width: 1000px;
    padding: 0;
}

#featured-manu-screen li {
    float: left;
    list-style: none;
}

#featured-manu-screen .jq-ss-crop {
    border: 1px solid #DDDDDD;
    float: left;
    background: #FFFFFF;
}

#featured-manu-screen #navleft, #featured-manu-screen #navright {
    font-weight: bolder;
    margin-top: 60px;
    display: block;
    text-decoration: none;
    color: black;
}

#featured-manu-screen #navleft {
    background: url(../images/btn_prev.png) top left no-repeat;
    width: 32px;
    height: 32px;
}

#featured-manu-screen #navright {
    background: url(../images/btn_next.png) top left no-repeat;
    width: 32px;
    height: 32px;
}

#featured-manu-screen li:hover #navleft {
    background: url(../images/btn_prev-hover.png) top left no-repeat;
}

#featured-manu-screen li:hover #navright {
    background: url(../images/btn_next-hover.png) top left no-repeat;
}

#featured-manu-view {
    width: 625px;
    overflow: hidden;
}

#featured-manu-images {
    width: 3818px !important;
    width: 3822px;
    padding: 0;
}

#featured-manu-images li {
    margin-right: 5px;
}

#featured-manu-images li img {
    max-width: 150px;
    border: 0;
}

/************************/
.manufacturers .manufacturer-grid {
    display: block;
}

.manufacturer-grid li.item {
    float: left;
    width: 33%;
    padding: 5px 0;
}

.manufacturer-grid li.manufacturer-group {
    float: left;
    width: 33%;
    padding: 12px 0;
}

.manufacturer-grid li.item a {
    text-decoration: none;
    color: #565656;
}

.manufacturer-grid li.item a:hover {
    text-decoration: underline;
}

.group-manufacturer-grid {
    display: block;
    position: relative;
    content: ".";
    clear: both;
}

.manufacturer-grid li.item img {
    float: left;
}

.group-manufacturer-grid li.item {
    float: left;
    width: 33%;
    padding: 12px 0;
}

.group-manufacturer-grid li.item a {
    text-decoration: none;
    color: #565656;
}

.group-manufacturer-grid li.item a:hover {
    text-decoration: underline;
}

div.manufacturer-image {
    width: 80px;
    height: 80px;
}

a.manufacturer-name {
    clear: both;
    float: left;
    text-align: center;
}

/* Sidebar */
.block-manufacturer {
}

.block-manufacturer .block-title {
}

.block-manufacturer .block-content {
    padding: 9px;
}

.manufacturer-sidebar {
}

.manufacturer-sidebar ul li {
    float: left;
    width: 45%;
    padding: 0 10px 0 0;
}

.manufacturer-sidebar ul li.right {
    padding: 0;
}

.manufacturer-sidebar ul li a {
    text-decoration: none;
    color: #565656;
}

.manufacturer-sidebar ul li a:hover {
    text-decoration: underline;
}

/*** Manufacturer detail page ***/
.manufacturer-description {
    margin-bottom: 20px;
    width: 100%;
}

.manufacturer-description .manufacturer-des-image {
    border: 1px solid #ddd;
    float: left;
    margin: 20px
}

.manufacturer-des-image img {
    max-width: 300px;
}

.manufacturer-description img {
    float: left;
}

.manufacturer-description .description-info {
    text-align: justify;
}

